# knowDB

./: .env.example  .gitignore  AI_ANALYST_GUIDE.md  AI_ANALYST_IMPLEMENTATION_SUMMARY.md  API_REFERENCE.md  AUTO_SAVE_INTEGRATION_GUIDE.md  CLAUDE.md  CLAUDE_DESKTOP_UX_GUIDE.md  COMPLETE_IMPLEMENTATION_GUIDE.md  CONTRIBUTING.md  DASHBOARD_SAVE_UX.md  DATE_DIMENSIONS_QUICK_REFERENCE.md  DOCUMENTATION_OVERHAUL_SUMMARY.md  DOCUMENTATION_RECOMMENDATIONS.md  Dockerfile  EXAMPLES.md  HIVE_MIND_COMPLETION_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  Makefile  PRODUCTION_DEPLOYMENT.md  QA_TESTING_SUMMARY.md  QUICKSTART.md  QUICK_START_IMPROVEMENTS.md  README.md  SECURITY_AUDIT_RESOLUTION.md  TEMPORAL_COLUMNS_VERIFICATION_REPORT.md  TEMPORAL_DIMENSIONS_GUIDE.md  TEMPORAL_DIMENSIONS_SUMMARY.md  TEMPORAL_VERIFICATION_SUMMARY.txt  TIME_BASED_QUERY_TEST_RESULTS.md  TIME_QUERY_EXAMPLES.md  TROUBLESHOOTING.md  VISUALIZATION_STRATEGY.md  WEEK_1_COMPLETE.md  claude_desktop_config_test.json  claude_desktop_config_test.json.example  create_sample_data.py  date_dimensions_config.yaml  (+8 more)
.claude/: project-memory.md
dashboards/: package.json
dashboards/sources/: knowdb.yaml
docs/: implementation-guide-user-interface-and-learning.md  native-claude-desktop-vision.md  prd-01-semantic-layer-auto-generation.md  prd-02-mcp-conversational-data-modeling.md  prd-03-knowledge-graph-data-modeling.md  prd-supplement-agentdb-integration.md  unified-vision-architecture-decision.md  week-1-implementation-guide.md
examples/: temporal_dimensions_demo.py
knowdb/: README.md  coverage.xml  pyproject.toml
knowdb/.github/workflows/: ci.yml
knowdb/src/knowdb/: __init__.py  cli.py
knowdb/src/knowdb/bridge/: __init__.py  dbt_sync.py
knowdb/src/knowdb/intelligence/: __init__.py  engine.py  statistical.py
knowdb/src/knowdb/mcp/: __init__.py  semantic_tools.py  server.py  tools.py
knowdb/src/knowdb/optimization/: __init__.py  cache.py  optimizer.py
knowdb/src/knowdb/semantic_layer/: __init__.py  exceptions.py  manager.py  types.py
knowdb/tests/: __init__.py  conftest.py
knowdb/tests/e2e/: __init__.py
knowdb/tests/fixtures/: __init__.py
knowdb/tests/integration/: __init__.py
knowdb/tests/unit/: __init__.py
knowdb/tests/unit/bridge/: __init__.py  test_dbt_sync.py
knowdb/tests/unit/intelligence/: __init__.py  test_engine.py
knowdb/tests/unit/mcp/: test_semantic_tools.py  test_server.py
knowdb/tests/unit/optimization/: __init__.py  test_cache.py
knowdb/tests/unit/semantic_layer/: __init__.py  test_manager.py
semantic_models/: ai_generated_metrics.backup_20251107_232556.yml  ai_generated_metrics.yml  metrics.yml
src/: ai_agent_flow.py  ai_semantic_inferrer.py  conversational_metrics.py  dashboard_manager.py  deployment_server.py  mcp_server.py  metadata_inspector.py  query_cache.py  safe_expression_parser.py  security.py  semantic_layer.py  semantic_yaml_generator.py  slack_integration.py  visualization_engine.py
tests/: test_security.py  test_semantic_layer.py  test_temporal_dimensions.py
